crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_ruby_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.rb\", &source)"
---
- name: Greetings
  kind: Module
  start_line: 4
  end_line: 22
  signature: module Greetings
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: Greeter
  kind: Class
  start_line: 5
  end_line: 15
  signature: class Greeter
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: greet
  kind: Method
  start_line: 6
  end_line: 8
  signature: def greet(name)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: format_name
  kind: Method
  start_line: 12
  end_line: 14
  signature: def format_name(name)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: FormalGreeter
  kind: Class
  start_line: 17
  end_line: 21
  signature: class FormalGreeter < Greeter
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: greet
  kind: Method
  start_line: 18
  end_line: 20
  signature: def greet(name)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: standalone_function
  kind: Method
  start_line: 24
  end_line: 27
  signature: def standalone_function(input)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
