crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_rust_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 8650
expression: "parsed_references(\"simple.rs\", &source)"
---
- name: "std::collections::HashMap"
  kind: Import
  start_line: 1
  context: "use std::collections::HashMap;"
  receiver: ~
- name: "crate::config::Settings"
  kind: Import
  start_line: 2
  context: "use crate::config::Settings;"
  receiver: ~
- name: HashMap
  kind: TypeRef
  start_line: 5
  context: "sensors: HashMap<String, Sensor>"
  receiver: ~
- name: Readable
  kind: Extends
  start_line: 18
  context: "impl Readable for SensorManager {"
  receiver: ~
- name: get_primary
  kind: Call
  start_line: 20
  context: self.get_primary().value
  receiver: self
- name: get_primary
  kind: ReadAccess
  start_line: 20
  context: self.get_primary()
  receiver: self
- name: value
  kind: Call
  start_line: 20
  context: self.get_primary().value()
  receiver: self.get_primary()
- name: value
  kind: ReadAccess
  start_line: 20
  context: self.get_primary().value()
  receiver: self.get_primary()
- name: for_each
  kind: Call
  start_line: 24
  context: self.sensors.values_mut().for_each(|s| s.reset());
  receiver: self.sensors.values_mut()
- name: for_each
  kind: ReadAccess
  start_line: 24
  context: self.sensors.values_mut().for_each(|s| s.reset())
  receiver: self.sensors.values_mut()
- name: reset
  kind: Call
  start_line: 24
  context: "|s| s.reset()"
  receiver: s
- name: reset
  kind: ReadAccess
  start_line: 24
  context: s.reset()
  receiver: s
- name: sensors
  kind: ReadAccess
  start_line: 24
  context: self.sensors.values_mut
  receiver: self
- name: values_mut
  kind: Call
  start_line: 24
  context: self.sensors.values_mut().for_each
  receiver: self.sensors
- name: values_mut
  kind: ReadAccess
  start_line: 24
  context: self.sensors.values_mut()
  receiver: self.sensors
- name: Self
  kind: TypeRef
  start_line: 29
  context: "pub fn new() -> Self {"
  receiver: ~
- name: SensorManager
  kind: TypeRef
  start_line: 30
  context: "SensorManager {"
  receiver: ~
- name: HashMap
  kind: TypeRef
  start_line: 31
  context: "HashMap::new()"
  receiver: ~
- name: new
  kind: Call
  start_line: 31
  context: "sensors: HashMap::new()"
  receiver: HashMap
- name: Sensor
  kind: TypeRef
  start_line: 35
  context: "fn get_primary(&self) -> &Sensor {"
  receiver: ~
- name: get
  kind: Call
  start_line: 36
  context: "self.sensors.get(\"primary\").unwrap"
  receiver: self.sensors
- name: get
  kind: ReadAccess
  start_line: 36
  context: "self.sensors.get(\"primary\")"
  receiver: self.sensors
- name: sensors
  kind: ReadAccess
  start_line: 36
  context: self.sensors.get
  receiver: self
- name: unwrap
  kind: Call
  start_line: 36
  context: "self.sensors.get(\"primary\").unwrap()"
  receiver: "self.sensors.get(\"primary\")"
- name: unwrap
  kind: ReadAccess
  start_line: 36
  context: "self.sensors.get(\"primary\").unwrap()"
  receiver: "self.sensors.get(\"primary\")"
- name: SensorManager
  kind: TypeRef
  start_line: 40
  context: "pub fn initialize(config: &Settings) -> SensorManager {"
  receiver: ~
- name: Settings
  kind: TypeRef
  start_line: 40
  context: "config: &Settings"
  receiver: ~
- name: SensorManager
  kind: TypeRef
  start_line: 41
  context: "SensorManager::new()"
  receiver: ~
- name: new
  kind: Call
  start_line: 41
  context: "let mgr = SensorManager::new();"
  receiver: SensorManager
- name: println
  kind: Macro
  start_line: 42
  context: "println!(\"Initialized with {:?}\", config);"
  receiver: ~
