crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_rust_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 5758
expression: "parsed_symbols(\"simple.rs\", &source)"
---
- name: SensorManager
  kind: Class
  start_line: 4
  end_line: 6
  signature: "pub struct SensorManager {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: sensors
  kind: Property
  start_line: 5
  end_line: 5
  signature: "sensors: HashMap<String, Sensor>"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: SensorManager
- name: SensorKind
  kind: Enum
  start_line: 8
  end_line: 11
  signature: "pub enum SensorKind {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: Readable
  kind: Interface
  start_line: 13
  end_line: 16
  signature: "pub trait Readable {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: SensorManager
  kind: Extension
  start_line: 18
  end_line: 26
  signature: "impl Readable for SensorManager {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: read
  kind: Method
  start_line: 19
  end_line: 21
  signature: "fn read(&self) -> f64 {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: f64
  parent_name: SensorManager
  scope_chain: SensorManager
- name: calibrate
  kind: Method
  start_line: 23
  end_line: 25
  signature: "fn calibrate(&mut self) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: SensorManager
  scope_chain: SensorManager
- name: SensorManager
  kind: Extension
  start_line: 28
  end_line: 38
  signature: "impl SensorManager {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: new
  kind: Method
  start_line: 29
  end_line: 33
  signature: "pub fn new() -> Self {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: Self
  parent_name: SensorManager
  scope_chain: SensorManager
- name: get_primary
  kind: Method
  start_line: 35
  end_line: 37
  signature: "fn get_primary(&self) -> &Sensor {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: "&Sensor"
  parent_name: SensorManager
  scope_chain: SensorManager
- name: initialize
  kind: Function
  start_line: 40
  end_line: 44
  signature: "pub fn initialize(config: &Settings) -> SensorManager {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: SensorManager
  parent_name: ~
  scope_chain: ~
