crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_scala_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"Simple.scala\", &source)"
---
- name: Greeter
  kind: Trait
  start_line: 3
  end_line: 5
  signature: "trait Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: SimpleGreeter
  kind: Class
  start_line: 7
  end_line: 15
  signature: "class SimpleGreeter extends Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: greet
  kind: Function
  start_line: 8
  end_line: 10
  signature: "override def greet(name: String): String = {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: formatName
  kind: Function
  start_line: 12
  end_line: 14
  signature: "private def formatName(name: String): String = {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: AppConfig
  kind: Module
  start_line: 17
  end_line: 23
  signature: "object AppConfig {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: defaultGreeting
  kind: Constant
  start_line: 18
  end_line: 18
  signature: "val defaultGreeting: String = \"Hello\""
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: createGreeter
  kind: Function
  start_line: 20
  end_line: 22
  signature: "def createGreeter(): Greeter = {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: main
  kind: Function
  start_line: 25
  end_line: 28
  signature: "def main(args: Array[String]): Unit = {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Public
  type_info: ~
- name: greeter
  kind: Constant
  start_line: 26
  end_line: 26
  signature: val greeter = AppConfig.createGreeter()
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
