crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_sv_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 6689
expression: "parsed_references(\"simple.sv\", &source)"
---
- name: common_defs.svh
  kind: Includes
  start_line: 1
  context: "`include \"common_defs.svh\""
  receiver: ~
- name: uvm_pkg
  kind: Import
  start_line: 3
  context: "import uvm_pkg::*;"
  receiver: ~
- name: BusTransaction
  kind: Import
  start_line: 4
  context: "import bus_pkg::BusTransaction;"
  receiver: ~
- name: bus_pkg
  kind: Import
  start_line: 4
  context: "import bus_pkg::BusTransaction;"
  receiver: ~
- name: sub_module
  kind: Call
  start_line: 25
  context: "sub_module #(.WIDTH(WIDTH)) u_sub ("
  receiver: ~
- name: base_packet
  kind: Extends
  start_line: 45
  context: class packet extends base_packet;
  receiver: ~
