crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_svelte_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.svelte\", &source)"
---
- name: simple
  kind: Class
  start_line: 1
  end_line: 31
  signature: "<svelte:component name=\"simple\">"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: EventListener
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: greet
  kind: Function
  start_line: 5
  end_line: 7
  signature: "export function greet(name) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: count
  kind: Variable
  start_line: 9
  end_line: 9
  signature: export let count = 0
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: EventListener
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: handleClick
  kind: Function
  start_line: 11
  end_line: 14
  signature: "function handleClick() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: EventListener
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: ~
